correct another overflow on mobil view
:q

--- a/app/assets/stylesheets/_form.sass
+++ b/app/assets/stylesheets/_form.sass
@@ -1,8 +1,13 @@
 @import colors
 
 
+
 form
 	text-align: center
+
+	fieldset
+		box-sizing: border-box 
+	
 
 	label
 		display: block
@@ -15,6 +20,7 @@ form
 	textarea
 		height: 250px
 		width: 100%
+		box-sizing: border-box 
 
 	input,
 	form textarea
@@ -25,6 +31,7 @@ form
 
 
 	ul.times
+		padding: 0px
 		list-style: none
 		text-align: center
 
@@ -43,6 +50,8 @@ label.radio_buttons_with_icon
 
 	
 ul.radio_buttons_with_icon 
+	
+	padding: 0px
 
 	background-color: $light_gray
 
