--- a/app/assets/stylesheets/_recipes.sass
+++ b/app/assets/stylesheets/_recipes.sass
@@ -194,7 +194,8 @@ section#recipe_edit
 
 	span.picture_ribon
 		height: 50px
-		padding: 10px
+		padding-top: 10px
+		padding-bottom: 10px
 		text-align: center
 		text-align: center
 		font-size: 30px
